--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -21,15 +21,11 @@ const title = (props.title ? `${props.title} | ` : ``) + Const.companyName;
 		<title set:html={title}></title>
 
 		{ isProd &&
-			<base href="https://fruit.robertakarobin.com/" />
-			<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-			})(window,document,'script','dataLayer','GTM-MVK7M6P');</script>
+			<base href="/" />
+			<script src="/js/tracking.js"></script>
 		}
 
-		<script type="module" src="src/js/index"></script>
+		<script src="src/js/index"></script>
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
