--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -33,7 +33,7 @@ const title = (props.title ? `${props.title} | ` : ``) + Const.companyName;
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
-		<nav class="navbar">
+		<nav class="navbar text--ondark">
 			<a href="." set:html={Const.companyName}></a>
 
 			<span class="navbar__spacer"></span>
